trunk/Archive2/79/a981da4355af21/output
main.cpp: In instantiation of 'class A<int>::C<char>':
main.cpp:23:3:   required from 'static void A<T>::B::Create() [with U = char; T = int]'
main.cpp:27:27:   required from here
main.cpp:18:15: error: 'Create' was not declared in this scope
   friend void B::Create<U>();
               ^
